fixed popup hidden behind tiles in low quality mode

--- a/src/scss/abstracts/variables.scss
+++ b/src/scss/abstracts/variables.scss
@@ -25,3 +25,6 @@
 
 $spacing: px(16);
 $border-radius: px(3);
+
+$z-index-menu: 100;
+$z-index-modal: 1000;
