--- a/src/scss/components/popup.scss
+++ b/src/scss/components/popup.scss
@@ -31,6 +31,7 @@
   display: none;
   margin-left: .25em;
   padding: .25em;
+  z-index: $z-index-menu - 1; // right below menu bar
 
   &.show {
     display: block;
